Fixed some UI layout issues

--- a/src/assets/styles/components/_navigation.scss
+++ b/src/assets/styles/components/_navigation.scss
@@ -13,6 +13,7 @@ $triangle-size: 7px;
 
   .ui.secondary.inverted.pointing.menu {
     border: none;
+    margin-left: -1em;
   }
 
   .ui.secondary.pointing.menu .item.pl-menu-item {
