--- a/src/assets/styles/components/_standings-table.scss
+++ b/src/assets/styles/components/_standings-table.scss
@@ -32,7 +32,7 @@ $table-border-color: #e8e8e8;
 
   .pl-number-column,
   .pl-pos-column {
-    width: 5%;
+    width: 6%;
     max-width: 55px;
   }
 
@@ -64,7 +64,7 @@ $table-border-color: #e8e8e8;
     align-items: center;
 
     img {
-      margin-right: 8px;
+      margin-left: -10px;
     }
   }
 }
