--- a/src/assets/styles/pages/_main-layout.scss
+++ b/src/assets/styles/pages/_main-layout.scss
@@ -14,7 +14,7 @@
 .pl-main-container-content {
   position: relative;
   min-height: 500px;
-  padding: 16px 0;
+  padding: 1em 0;
   background: #fff;
   border: none;
   border-radius: 1px;
